--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "meepo-themes",
   "version": "1.0.0",
   "license": "MIT",
-  "main": "dist/styles.bundle.css",
+  "main": "index.scss",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -36,9 +36,7 @@
     "sass-burger": "^1.3.1",
     "sass-planifolia": "^0.5.0",
     "weui": "^1.1.2",
-    "zone.js": "^0.8.14"
-  },
-  "devDependencies": {
+    "zone.js": "^0.8.14",
     "@angular/cli": "1.6.3",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
@@ -58,5 +56,6 @@
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
     "typescript": "~2.4.2"
-  }
+  },
+  "devDependencies": {}
 }
