--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.scss",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port 4003",
     "build": "ng build --prod --output-hashing=none",
     "test": "ng test",
     "lint": "ng lint",
