--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meepo-themes",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "license": "MIT",
   "main": "index.scss",
   "scripts": {
@@ -13,38 +13,32 @@
     "git": "git add . && git commit -m 'update to save ' && git push origin master"
   },
   "private": false,
-  "dependencies": {},
+  "dependencies": {
+    "swiper": "^4.1.0"
+  },
   "devDependencies": {
     "@angular-devkit/core": "^0.0.29",
     "@angular/animations": "^5.0.0",
+    "@angular/cli": "1.6.3",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
+    "@angular/compiler-cli": "^5.0.0",
     "@angular/core": "^5.0.0",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
+    "@angular/language-service": "^5.0.0",
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@types/jasmine": "~2.5.53",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/node": "~6.0.60",
     "animatewithsass": "^3.2.1",
+    "codelyzer": "^4.0.1",
     "core-js": "^2.4.1",
     "family.scss": "^1.0.8",
     "hover.css": "^2.2.1",
     "ionicons": "^3.0.0",
-    "mathsass": "^0.10.1",
-    "normalize-scss": "^7.0.1",
-    "normalize.css": "^7.0.0",
-    "rxjs": "^5.5.2",
-    "sass-burger": "^1.3.1",
-    "sass-planifolia": "^0.5.0",
-    "weui": "^1.1.2",
-    "zone.js": "^0.8.14",
-    "@angular/cli": "1.6.3",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/language-service": "^5.0.0",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -53,9 +47,17 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "mathsass": "^0.10.1",
+    "normalize-scss": "^7.0.1",
+    "normalize.css": "^7.0.0",
     "protractor": "~5.1.2",
+    "rxjs": "^5.5.2",
+    "sass-burger": "^1.3.1",
+    "sass-planifolia": "^0.5.0",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.4.2"
+    "typescript": "~2.4.2",
+    "weui": "^1.1.2",
+    "zone.js": "^0.8.14"
   }
 }
